--- a/client/src/index.css
+++ b/client/src/index.css
@@ -131,6 +131,10 @@
   animation: scroll-x 50s linear infinite;
 }
 
+.gradient-title {
+  @apply bg-gradient-to-b from-gray-400 via-gray-200 to-gray-600 font-extrabold tracking-tighter text-transparent bg-clip-text pb-2 pr-2;
+}
+
 
 .grid-background {
   position: fixed;
